// Code generated by goctl. DO NOT EDIT!
// Source: bc_proxy.proto

package server

import (
	"context"

	"github.com/wymli/bcsns/app/bc_proxy/internal/logic"
	"github.com/wymli/bcsns/app/bc_proxy/internal/svc"
	"github.com/wymli/bcsns/app/bc_proxy/pb"
)

type BcProxyServer struct {
	svcCtx *svc.ServiceContext
	pb.UnimplementedBcProxyServer
}

func NewBcProxyServer(svcCtx *svc.ServiceContext) *BcProxyServer {
	return &BcProxyServer{
		svcCtx: svcCtx,
	}
}

func (s *BcProxyServer) OnChainUserMsg(ctx context.Context, in *pb.OnChainUserMsgReq) (*pb.OnChainUserMsgResp, error) {
	l := logic.NewOnChainUserMsgLogic(ctx, s.svcCtx)
	return l.OnChainUserMsg(in)
}

func (s *BcProxyServer) OnChainRoomMsg(ctx context.Context, in *pb.OnChainRoomMsgReq) (*pb.OnChainRoomMsgResp, error) {
	l := logic.NewOnChainRoomMsgLogic(ctx, s.svcCtx)
	return l.OnChainRoomMsg(in)
}

func (s *BcProxyServer) OnChainMoments(ctx context.Context, in *pb.OnChainMomentsReq) (*pb.OnChainMomentsResp, error) {
	l := logic.NewOnChainMomentsLogic(ctx, s.svcCtx)
	return l.OnChainMoments(in)
}

func (s *BcProxyServer) PullRoomMsg(ctx context.Context, in *pb.PullRoomMsgReq) (*pb.PullRoomMsgResp, error) {
	l := logic.NewPullRoomMsgLogic(ctx, s.svcCtx)
	return l.PullRoomMsg(in)
}

func (s *BcProxyServer) PullUserMsg(ctx context.Context, in *pb.PullUserMsgReq) (*pb.PullUserMsgResp, error) {
	l := logic.NewPullUserMsgLogic(ctx, s.svcCtx)
	return l.PullUserMsg(in)
}
